# metassr

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUTURE_FEATURES.md  LICENSE  LICENSE.md  README.md  TODO.md
.github/workflows/: clippy.yml  release.yml
crates/html-generator/: Cargo.toml
crates/html-generator/src/: builder.rs  default.html  html_props.rs  lib.rs  template.rs
crates/logger/: Cargo.toml  README.md
crates/logger/src/: lib.rs
crates/metassr-build/: Cargo.toml
crates/metassr-build/src/: bundler.rs  lib.rs  shared.rs  traits.rs  utils.rs
crates/metassr-build/src/client/: bundler.rs  hydrator.rs  mod.rs
crates/metassr-build/src/client/scripts/: bundle.js  hydrate.js.template
crates/metassr-build/src/scripts/: bundle.js  hydrate.js.template  render.js.template
crates/metassr-build/src/server/: head_renderer.rs  html_renderer.rs  manifest.rs  mod.rs  pages_generator.rs  render.rs  render_exec.rs  targets.rs
crates/metassr-build/src/server/renderer/: head.rs  html.rs  mod.rs  page.rs
crates/metassr-bundler/: Cargo.toml
crates/metassr-bundler/src/: bundle.js  lib.rs
crates/metassr-bundler/tests/: home.js  package.json
crates/metassr-core/: Cargo.toml
crates/metassr-core/src/server/: handler.rs  mod.rs
crates/metassr-core/src/server/layers/: tracing.rs
crates/metassr-create/: Cargo.toml  build.rs
crates/metassr-create/src/: lib.rs  templates.rs
crates/metassr-create/templates/javascript/: .gitignore  jsconfig.json  package.json
crates/metassr-create/templates/javascript/src/: _app.jsx  _head.jsx
crates/metassr-create/templates/javascript/src/components/: clock.jsx  footer.jsx  github.jsx  header.jsx  link.jsx
crates/metassr-create/templates/javascript/src/layout/: PageLayout.jsx
crates/metassr-create/templates/javascript/src/pages/: _notfound.jsx  index.jsx
crates/metassr-create/templates/javascript/src/styles/: global.css
crates/metassr-create/templates/typescript/: .gitignore  build.js  package.json
crates/metassr-create/templates/typescript/src/: _app.tsx  types.ts
crates/metassr-create/templates/typescript/src/components/: clock.tsx  footer.tsx  github.tsx  header.tsx  link.tsx
crates/metassr-create/templates/typescript/src/layout/: PageLayout.tsx
crates/metassr-create/templates/typescript/src/pages/: _notfound.tsx  index.tsx
crates/metassr-create/templates/typescript/src/styles/: global.css
crates/metassr-fs-analyzer/: Cargo.toml
crates/metassr-fs-analyzer/src/: dist_dir.rs  lib.rs  src_dir.rs
crates/metassr-server/: Cargo.toml
crates/metassr-server/src/: fallback.rs  handler.rs  lib.rs  router.rs
crates/metassr-server/src/layers/: tracing.rs
crates/metassr-swc/: Cargo.toml
crates/metassr-swc/src/: lib.rs
crates/metassr-utils/: Cargo.toml  README.md
crates/metassr-utils/src/: cache_dir.rs  checker.rs  dist_analyzer.rs  fs_analyzer.rs  lib.rs  rand.rs  src_analyzer.rs  traits.rs
crates/metassr-utils/src/analyzer/: dist_dir.rs  mod.rs  src_dir.rs
docs/: README.md
docs/getting-started/: README.md  cli.md  folder-structure.md  installation.md
metassr-cli/: Cargo.toml
metassr-cli/src/: cli.rs  main.rs  trace.rs
metassr-cli/src/cli/: builder.rs  creator.rs  mod.rs  runner.rs  traits.rs
scripts/: bump-version.sh
src/: lib.rs
tests/web-app/: App.tsx  package-lock.json  package.json  tsconfig.json
tests/web-app/src/: _app.tsx  _head.tsx
tests/web-app/src/components/: footer.tsx  header.tsx
tests/web-app/src/layout/: PageLayout.tsx
tests/web-app/src/pages/: _notfound.tsx  home.tsx  index.tsx
tests/web-app/src/pages/blog/: $article.tsx  index.js  index.tsx
tests/web-app/src/styles/: global.css
tests/web-app/static/: script.js  static-page.html
tests/web-app/static/blog/: article-1.md  article-2.md  article-3.md  article-4.md  article-5.md  article-6.md
