[package]
name = "metassr-cli"
version = "0.1.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
metacall = "0.4.0"

axum = "0.7.5"
tokio = "1.37.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

logger = { path = "../crates/logger" }
metassr-server = { path = "../crates/metassr-server" }
metassr-build = { path = "../crates/metassr-build" }
