[package]
name = "metassr-bundler"
version = "0.0.1-alpha"
edition = "2021"
description = "A simple crate is used for web bundling built on Metacall and Rspack."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
lazy_static = "1.5.0"
metacall = "0.4.1"
metassr-utils = { path = "../metassr-utils" }
serde_json = "1.0.128"
