[package]
name = "metassr-fs-analyzer"
description = "This module provides directory analyzers for MetaSSR web applications."
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
metassr-utils = { version = "0.0.1-alpha", path = "../metassr-utils" }
serde = "1.0.210"
walkdir = "2.5.0"
