[package]
name = "metassr-swc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "0.33.26"
swc_ecma_ast = "0.113.2"
swc_ecma_parser = "0.144.1"
swc_ecma_transforms_typescript = "0.189.1"
swc_ecma_visit = "0.99.1"
swc = "0.275.0"
anyhow = "1.0.83"
swc_ecma_codegen = "0.149.1"
swc_ecma_transforms_base = "0.138.2"
serde = "1.0.201"
serde_json = "1.0.117"
