[package]
name = "metassr-utils"
version = "0.0.1-alpha"
edition = "2021"
description = "Important utilites for MetaSSR"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = {version = "1.0.207", features = ["derive"]}
walkdir = "2.5.0"
